--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 /07-Math.metodos/nbproject/private/
 /07-Math.metodos/build/
 /09- Arrays-bidimensionales/nbproject/private/
+/09- Arrays-bidimensionales/build/
+/05-POO/build/
+/05-POO/dist/
+/10-Uso_static/nbproject/private/
+/10-uso_static/nbproject/private/
+/10_Uso_station/nbproject/private/
+/ejemplo/nbproject/private/
+/ejemplo/build/
+/02-Login/build/
+/10_Uso_station/build/
+/Herencia/nbproject/private/
